# HomeIOT

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_REPORT.md  README.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
adapters-py/control4/: README.md  pyproject.toml
adapters-py/control4/home_brain_control4/: __init__.py  backend.py  main.py  mock_backend.py  pycontrol4_backend.py
adapters-py/iaqualink/: README.md  pyproject.toml
adapters-py/iaqualink/home_brain_iaqualink/: __init__.py  backend.py  iaqualink_backend.py  main.py  mock_backend.py
adapters-py/tuya/: README.md  pyproject.toml
adapters-py/tuya/home_brain_tuya/: __init__.py  backend.py  main.py  mock_backend.py  tinytuya_backend.py
alexa-skill/: README.md
alexa-skill/lambda/: config.example.js  index.js  package.json
alexa-skill/skill-package/: skill.json
config/: house.example.yaml  house.starter.yaml  scenes.example.yaml
docs/: ADAPTER_GUIDE.md  ALEXA_ROUTINES.md  CLOUDFLARE_TUNNEL.md  DATA_INGESTION_CHECKLIST.md  HA_DECISION.md  IMESSAGE_BRIDGE.md  MQTT_TOPICS.md  MUSIC_TUNING.md  OPEN_QUESTIONS.md  PROJECT_SCOPE.md  SCHEDULE_BRAINSTORM.md  SONOS_ACTION_ITEMS.md  TOOL_SCHEMA.md  TUYA_INTEGRATION.md
mosquitto/config/: mosquitto.conf
prisma/: schema.prisma
scripts/: com.homebrain.brain.plist  com.homebrain.imessage.plist  discover-control4.py  discover.ts  imessage-bridge.test.ts  imessage-bridge.ts  install-launchd.sh  launchd-boot.sh  list-sonos.ts  resume.sh  run-all.sh  setup-mac-mini.sh  setup-tunnel.sh  smoke-voice.sh  smoke.ts  test-interpret.sh
src/: config.ts  server.ts
src/auth/: hmac.test.ts  hmac.ts  source-authz.test.ts  source-authz.ts
src/core/: api-metrics.ts  bus.ts  db.ts  house.ts  log.ts  redis.ts  scenes.ts  scheduler.ts  solar.ts  world.ts
src/intent/: classifier.test.ts  classifier.ts  executor.ts  index.ts  normalize.ts  planner-claude.ts  planner.ts  query-state.test.ts  registry.test.ts  registry.ts  router.test.ts  router.ts  scene-engine.test.ts  types.ts  (+1 more)
(+31 files in other folders)
