[project]
name = "home-brain-control4"
version = "0.1.0"
description = "Home Brain adapter for Control4 — bridges Director REST/WebSocket to the MQTT bus."
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0",
    "PyYAML>=6.0",
    # pyControl4 is added only when SONOS_MODE=real-equivalent is wanted.
    # For the mock backend it's not needed.
    # "pyControl4>=1.2",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
